- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.7` (in progress)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Sync gauge support
** [ADD] Option to set explicit bucket boundaries advice for histograms
** [ADD] `:links` option for `add-span-data!`
** [FIX] `metrics-by-route-interceptors` should record requests that have 404 HTTP response code
** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
* [MAINT] Updated guide on using `wrap-metrics-by-route` to also wrap Reitit default handler.
This ensures correct recording of metrics for HTTP server spans with 404, 405 and 406 response codes.
* [MAINT] Various build deps
- Refactored microservice examples
** [MAINT] Removed uberjar build step.
All application instances now use a `clojure` Docker image rather than custom image containing an uberjar.
** [ADD] For telemetry backend, changed to use Grafana with Grafana Tempo and Prometheus.
** [ADD] Added state lifecycle management, using `with-open` and `closeable` pattern.
** [MAINT] Altered Ring/Pedestal servers to reload routes on every HTTP request.
** [ADD] Added embedded nREPL server to all application and load-gen instances for remote access.

=== `0.2.6` (2024-01-15)

- Bump deps
* [MAINT] OpenTelemetry `1.34.1`
* [BREAK] OpenTelemetry instrumentation agent `2.0.0`